--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -79,13 +79,13 @@
                             <th rowspan="2">TOKEN</th>
                             <th rowspan="2">TEMPO</th>
                             <th rowspan="2">RECOMPENSA</th>
-                            <th colspan="3">FARM</th>
-                            <th rowspan="2">SAQUE</th>
+                            <th colspan="3" id="header-farm-parent">FARM</th> <!-- Adicionei um ID específico para o cabeçalho FARM pai -->
+                            <th rowspan="2" id="header-saque-main">SAQUE</th> <!-- Adicionei um ID para o cabeçalho SAQUE principal -->
                         </tr>
                         <tr>
-                            <th>BLOCO</th>
-                            <th>DIA</th>
-                            <th>MÊS</th>
+                            <th id="header-bloco-sub">BLOCO</th> <!-- ID para o sub-cabeçalho BLOCO -->
+                            <th id="header-dia-sub">DIA</th>     <!-- ID para o sub-cabeçalho DIA -->
+                            <th id="header-mes-sub">MÊS</th>     <!-- ID para o sub-cabeçalho MÊS -->
                         </tr>
                     </thead>
                     <tbody>
