--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -108,6 +108,15 @@
                             <td>X</td>
                         </tr>
                         <tr>
+                            <td>HMT</td>
+                            <td id="HMTtempo"></td>
+                            <td id="HMTbloco"></td>
+                            <td id="HMTfblk"></td>
+                            <td id="HMTfdia"></td>
+                            <td id="HMTfmes"></td>
+                            <td>X</td>
+                        </tr>
+                        <tr>
                             <td>BTC</td>
                             <td id="BTCtempo"></td>
                             <td id="BTCbloco"></td>
@@ -123,7 +132,7 @@
                             <td id="LTCfblk"></td>
                             <td id="LTCfdia"></td>
                             <td id="LTCfmes"></td>
-                            <td>X</td>
+                            <td id="LTCsaque"></td>
                         </tr>
                         <tr>
                             <td>BNB</td>
@@ -187,6 +196,15 @@
                             <td id="SOLfdia"></td>
                             <td id="SOLfmes"></td>
                             <td id="SOLsaque"></td>
+                        </tr>
+                        <tr>
+                            <td>ALGO</td>
+                            <td id="ALGOtempo"></td>
+                            <td id="ALGObloco"></td>
+                            <td id="ALGOfblk"></td>
+                            <td id="ALGOfdia"></td>
+                            <td id="ALGOfmes"></td>
+                            <td id="ALGOsaque"></td>
                         </tr>
                     </tbody>
                 </table>
